apps/tencentcloud/jenkins/post/_base/policies/tests/inject-image-pull-secrets/resource-cr.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-cr
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: cr-qcloud.pingcap.net/pingcap-qe/ci-jenkins:latest
    - name: jnlp
      image: cr.pingcap.net/jenkins/inbound-agent:latest
