apps/tencentcloud/jenkins/post/_base/policies/tests/inject-image-pull-secrets/resource-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-init
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  initContainers:
    - name: init
      image: cr.pingcap.net/toolbox/init:1
  containers:
    - name: utils
      image: busybox:1.36
