apps/tencentcloud/jenkins/post/_base/policies/tests/inject-image-pull-secrets/resource-plain.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-plain
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: busybox:1.36
